--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "jasmine": "^3.5.0",
     "memory-streams": "^0.1.3",
     "typescript": "^3.7.4"
+  },
+  "dependencies": {
+    "@types/uuid": "^3.4.6",
+    "uuid": "^3.3.3"
   }
 }
