--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/node": "^13.1.2",
     "jasmine": "^3.5.0",
     "memory-streams": "^0.1.3",
-    "typescript": "^3.7.4"
+    "mustache": "^3.2.1",
+    "typescript": "^3.7.4",
+    "yaml": "^1.7.2"
   },
   "dependencies": {
     "@types/uuid": "^3.4.6",
+    "rxjs": "^6.5.4",
     "uuid": "^3.3.3"
   }
 }
