--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "hl7 + mllp protocol for RoMi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "Teo Koon Peng <koonpeng@openrobotics.org>",
   "license": "Apache-2.0",
