--- a/templates/observation-models.yaml
+++ b/templates/observation-models.yaml
@@ -27,12 +27,12 @@
     file: 'instrument-sets.ts',
     class: 'InstrumentSets',
     properties: [
-      { id: 'SKU_CODE', name: 'sku' },
-      { id: 'SERIAL_NO', name: 'serialNo' },
-      { id: 'QUANTITY', name: 'quantity' },
-      { id: 'NAME', name: 'name' },
-      { id: 'MANUFACTURER', name: 'manufacturer' },
-      { id: 'LOCATION', name: 'location' },
+      { id: 'SKU_CODE', name: 'sku', type: 'ST' },
+      { id: 'SERIAL_NO', name: 'serialNo', type: 'ST' },
+      { id: 'QUANTITY', name: 'quantity', type: 'NM' },
+      { id: 'NAME', name: 'name', type: 'ST' },
+      { id: 'MANUFACTURER', name: 'manufacturer', type: 'ST' },
+      { id: 'LOCATION', name: 'location', type: 'ST' },
     ],
   },
   {
@@ -40,14 +40,14 @@
     file: 'operating-theatre.ts',
     class: 'OperatingTheatre',
     properties: [
-      { id: 'OTR_NO', name: 'roomNumber' },
-      { id: 'C_DISPLINE', name: 'discipline' },
-      { id: 'C_CASETYPE', name: 'caseType' },
-      { id: 'C_STARTTIME', name: 'startTime' },
-      { id: 'C_ENDTIME', name: 'endTime' },
-      { id: 'C_DETAILS', name: 'details' },
-      { id: 'C_SURGEON_NAME', name: 'surgeonName' },
-      { id: 'C_DATE', name: 'date' },
+      { id: 'OTR_NO', name: 'roomNumber', type: 'ST' },
+      { id: 'C_DISCIPLINE', name: 'discipline', type: 'ST' },
+      { id: 'C_CASETYPE', name: 'caseType', type: 'ST' },
+      { id: 'C_STARTTIME', name: 'startTime', type: 'TS' },
+      { id: 'C_ENDTIME', name: 'endTime', type: 'TS' },
+      { id: 'C_DETAILS', name: 'details', type: 'ST' },
+      { id: 'C_SURGEON_NAME', name: 'surgeonName', type: 'ST' },
+      { id: 'C_DATE', name: 'date', type: 'TS' },
     ],
   },
   {
@@ -55,10 +55,10 @@
     file: 'pain.ts',
     class: 'Pain',
     properties: [
-      { id: 'P_TYPE', name: 'type' },
-      { id: 'P_DESCRIPTION', name: 'description' },
-      { id: 'P_SCORE', name: 'score' },
-      { id: 'P_SITE', name: 'site' },
+      { id: 'P_TYPE', name: 'type', type: 'ST' },
+      { id: 'P_DESCRIPTION', name: 'description', type: 'ST' },
+      { id: 'P_SCORE', name: 'score', type: 'NM' },
+      { id: 'P_SITE', name: 'site', type: 'ST' },
     ],
   },
   # {
@@ -66,14 +66,14 @@
   #   file: 'vitals.ts',
   #   class: 'Vitals',
   #   properties: [
-  #     { id: 'TEMP_C', name: 'temperature' },
-  #     { id: 'RESP_RATE', name: 'respirationRate' },
-  #     { id: 'NIBP_S', name: 'bpSystolic' },
-  #     { id: 'NIBP_D', name: 'bpDiastolic' },
-  #     { id: 'NIBP_M', name: 'bpMean' },
-  #     { id: 'HEART_RATE', name: 'heartRate' },
-  #     { id: 'H_TYPE', name: 'heartRhythm' },
-  #     { id: 'H_PACING', name: 'heartPacing' },
+  #     { id: 'TEMP_C', name: 'temperature', type: 'NM' },
+  #     { id: 'RESP_RATE', name: 'respirationRate', type: 'NM' },
+  #     { id: 'NIBP_S', name: 'bpSystolic', type: 'NM' },
+  #     { id: 'NIBP_D', name: 'bpDiastolic', type: 'NM' },
+  #     { id: 'NIBP_M', name: 'bpMean', type: 'NM' },
+  #     { id: 'HEART_RATE', name: 'heartRate', type: 'NM' },
+  #     { id: 'H_TYPE', name: 'heartRhythm', type: 'NM' },
+  #     { id: 'H_PACING', name: 'heartPacing', type: 'NM' },
   #   ],
   # },
 ]
