--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "node scripts/generate-models.js && tsc",
     "watch": "tsc --watch",
     "test": "jasmine",
-    "clean": "rm -rf dist && rm -rf src/esb/models"
+    "clean": "rm -rf dist && rm -rf src/esb/models",
+    "lint": "eslint . --ext .ts"
   },
   "author": "Teo Koon Peng <koonpeng@openrobotics.org>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/jasmine": "^3.5.0",
     "@types/node": "^13.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
     "jasmine": "^3.5.0",
     "memory-streams": "^0.1.3",
     "mustache": "^3.2.1",
