--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jasmine": "^3.5.0",
     "memory-streams": "^0.1.3",
     "mustache": "^3.2.1",
+    "typemoq": "^2.1.0",
     "typescript": "^3.7.4",
     "yaml": "^1.7.2"
   },
