--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "node scripts/generate-models.js && tsc && cp package.json package-lock.json dist/src",
+    "build": "tsc && cp package.json dist/src",
     "watch": "tsc --watch",
     "test": "jasmine",
-    "clean": "rm -rf dist && rm -rf src/esb/models",
+    "clean": "rm -rf dist",
     "lint": "eslint . --ext .ts"
   },
   "author": "Teo Koon Peng <koonpeng@openrobotics.org>",
@@ -21,14 +21,10 @@
     "eslint": "^6.8.0",
     "jasmine": "^3.5.0",
     "memory-streams": "^0.1.3",
-    "mustache": "^3.2.1",
-    "typemoq": "^2.1.0",
-    "typescript": "^3.7.4",
-    "yaml": "^1.7.2"
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "@types/uuid": "^3.4.6",
-    "rxjs": "^6.5.4",
     "uuid": "^3.3.3"
   }
 }
