--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "watch": "tsc --watch",
     "test": "jasmine",
     "clean": "rm -rf dist",
